Further adjusted the footer within the main container by wrapping the content in seperate elements so they can be organized into columns as well as rows effectively. Furthermore, added a profile icon to the footer and ensured the elements had space between them for better readability.

--- a/styles.scss
+++ b/styles.scss
@@ -45,8 +45,19 @@ body {
     }
     .footer {
         display: flex;
-        justify-content: center;
-        align-items: center;
+        justify-content: space-between;
+    }
+    .profile-container {
+        width: 3rem;
+        img {
+            max-inline-size: 100%;
+            block-size: auto;
+            border-radius: 50%;
+        }
+    }
+    .inner-text-footer {
+        display: flex;
+        flex-direction: column;
     }
 }
 .img-container {
